tests/compile_fail/mul/unknown_container_attribute.stderr
error: only `forward` allowed here
 --> tests/compile_fail/mul/unknown_container_attribute.rs:2:7
  |
2 | #[mul(unknown)]
  |       ^^^^^^^

error: only `forward` allowed here
 --> tests/compile_fail/mul/unknown_container_attribute.rs:6:7
  |
6 | #[mul(unknown)]
  |       ^^^^^^^
